--- a/src/main/resources/static/teacher_main.html
+++ b/src/main/resources/static/teacher_main.html
@@ -4,15 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Meet Here 主页</title>
+		<title>Meet Here 教师主页</title>
 		<meta name="description" content="A sidebar menu as seen on the Google Nexus 7 website" />
 		<meta name="keywords" content="google nexus 7 menu, css transitions, sidebar, side menu, slide out menu" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="../css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="../css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="../css/component.css" />
-		<script src="../js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<script src="js/modernizr.custom.js"></script>
+		<script type="text/javascript" src="http://127.0.0.1/CarAppStore/js/jquery/jquery-1.9.0.min.js"></script>
+		<script type="text/javascript" src="http://127.0.0.1/CarAppStore/js/jquery/jquery-form.js"></script>
+		
 		
 		
 	</head>
@@ -29,10 +32,7 @@
 									<a class="gn-icon gn-icon-article" onclick="toMyCourse()">我的课程</a>
 								</li>
 								<li><a class="gn-icon gn-icon-cog" onclick="toQueryCourse()">课程管理</a></li>
-								<li><a class="gn-icon gn-icon-article" onclick="toMyReserve()">我的预约</a></li>
-								<li>
-									<a class="gn-icon gn-icon-cog" onclick="toReserveField()">预约场馆</a>
-								</li>
+								
 								<li>
 									<a class="gn-icon gn-icon-article" onclick="toAnnounce()()">通知公告</a>
 								</li>
@@ -45,66 +45,29 @@
 			</ul>
 			
 			<header>
-				<h1 id="h1" >欢迎来到Meet Here！</h1>
+				<h1 id="h1" style="margin-left: 35%;">欢迎来到Meet Here！</h1>
 			</header> 
 			<div style="background-color: whitesmoke;width: 100%;height: 50px;">
-				<label class="input-label">日期：</label>
-				<input class="d1input" type="text" placeholder="yy:mm:dd" />
 				
 			</div>
 
-			<table id="table-7" style="background-color: white;">
-			<thead>
-			<th>Name</th>
-			<th>City</th>
-			<th>Phone</th>
-			</thead>
-			<tbody>
-			<tr>
-			<td>Albert Ellis</td>
-			<td>New York</td>
-			<td>+1 718 000000</td>
-			</tr>
-			<tr>
-			<td>Marcus Aurelius</td>
-			<td>Rome</td>
-			<td>+1 718 000000</td>
-			</tr>
-			<tr>
-			<td>Epictetus</td>
-			<td>Greece</td>
-			<td>+1 718 000000</td>
-			</tr>
-			<tr>
-			<td>Aristotle</td>
-			<td>Greece</td>
-			<td>+1 718 000000</td>
-			</tr>
-			</tbody>
-			</table>
 			
 		</div><!-- /container -->
-		<script src="../js/classie.js"></script>
-		<script src="../js/gnmenu.js"></script>
+		<script src="js/classie.js"></script>
+		<script src="js/gnmenu.js"></script>
 		<script>
 			new gnMenu( document.getElementById( 'gn-menu' ) );
 			function toMainPage(){
-				window.location.href='main.html';
+				window.location.href='teacher_main.html';
 			}
 			function toMyCourse(){
-				window.location.href='myCourse.html';
+				window.location.href='teacher_myCourse.html';
 			}
 			function toQueryCourse(){
-				window.location.href='queryCourse.html';
-			}
-			function toMyReserve(){
-				window.location.href='myReserve.html';
-			}
-			function toReserveField(){
-				window.location.href='reserveField.html';
+				window.location.href='teacher_queryCourse.html';
 			}
 			function toAnnounce(){
-				window.location.href='announce.html';
+				window.location.href='teacher_announce.html';
 			}
 		</script>
 	</body>
