--- a/src/main/resources/static/teacher_announce.html
+++ b/src/main/resources/static/teacher_announce.html
@@ -57,11 +57,10 @@
 						<div class="gn-scroller">
 							<ul class="gn-menu">
 								
-								<li>
-									<a class="gn-icon gn-icon-article" onclick="toMyCourse()">我的课程</a>
-								</li>
 								<li><a class="gn-icon gn-icon-cog" onclick="toQueryCourse()">课程管理</a></li>
-								 
+								<li>
+									<a class="gn-icon gn-icon-article" onclick="toMyCourse()">预约场馆</a>
+								</li>
 								<li>
 									<a class="gn-icon gn-icon-article" onclick="toAnnounce()()">通知公告</a>
 								</li>
@@ -89,7 +88,7 @@
 			</header> 
 			
 			
-			<table id="table-7" style="background-color:white;margin-left: 350px;">
+			<table id="table-7" style="background-color:white;margin-left: 450px;">
 			<thead>
 			<th>通知编号</th>
 			<th>发布时间</th>
@@ -111,7 +110,7 @@
 				window.location.href='teacher_main.html';
 			}
 			function toMyCourse(){
-				window.location.href='teacher_myCourse.html';
+				window.location.href='teacher_myReserve.html';
 			}
 			function toQueryCourse(){
 				window.location.href='teacher_queryCourse.html';
@@ -120,6 +119,5 @@
 				window.location.href='teacher_announce.html';
 			}
 		</script>
-		
 	</body>
 </html>
