--- a/src/main/resources/static/teacher_queryCourse.html
+++ b/src/main/resources/static/teacher_queryCourse.html
@@ -69,11 +69,11 @@
 						<div class="gn-scroller">
 							<ul class="gn-menu">
 								
-								<li>
-									<a class="gn-icon gn-icon-article" onclick="toMyCourse()">我的课程</a>
-								</li>
-								<li><a class="gn-icon gn-icon-cog" onclick="toQueryCourse()">课程管理</a></li>
 								
+								<li><a class="gn-icon gn-icon-cog" onclick="toQueryCourse()">课程管理</a></li>
+								<li>
+									<a class="gn-icon gn-icon-article" onclick="toMyCourse()">预约场馆</a>
+								</li>
 								<li>
 									<a class="gn-icon gn-icon-article" onclick="toAnnounce()()">通知公告</a>
 								</li>
@@ -160,7 +160,7 @@
 				window.location.href='teacher_main.html';
 			}
 			function toMyCourse(){
-				window.location.href='teacher_myCourse.html';
+				window.location.href='teacher_myReserve.html';
 			}
 			function toQueryCourse(){
 				window.location.href='teacher_queryCourse.html';
